spring4shell/3-spring4shell-gw.yaml
apiVersion: gateway.solo.io/v1
kind: Gateway
metadata:
  name: gateway-proxy
  namespace: gloo-system
spec:
  bindAddress: '::'
  bindPort: 8080
  proxyNames:
  - gateway-proxy
  httpGateway:
    options:
      waf:
        customInterventionMessage: 'Spring4Shell malicious payload'
        ruleSets:
        - ruleStr: |
            SecRuleEngine On
            SecRule REQUEST_HEADERS_NAMES 
              "@contains spring.cloud.function.routing-expression" 
              "id:1001,deny,status:403,log,t:lowercase,msg:'Potential Remote Command Execution: Spring4Shell CVE-2022-22963'"
        - ruleStr: |
            SecRuleEngine On
            SecRequestBodyAccess On
            SecRule REQUEST_BODY  
              "@contains class.module.classLoader.resources.context.parent.pipeline.first.pattern" 
              "id:1002,phase:2,deny,status:403,log,msg:'Potential Remote Command Execution: Spring4Shell CVE-2022-22965'"
